Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -6,6 +6,7 @@ I am aiming to have these things in V1.5.0:
  * Rotating buildings to the nearest path (in progress)
  * Importing portraits (if I can figure out how to do that)
  * More buildings (normal library, ruined house)
+ * Sort house chests (put three bits of paper in the first slot)
  * Generate signs more dynamically (in progress)
  * Other stuff...
 
