--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,7 +5,6 @@ I am aiming to have these things in V1.5.0:
 
  * Importing portraits (if I can figure out how to do that)
  * More buildings (normal library, ruined house)
- * Generate signs more dynamically (in progress)
  * Other stuff...
 
 These changes are done and will be in V1.5.0:
@@ -24,3 +23,4 @@ These changes are done and will be in V1.5.0:
  * Buildings are rotated to the nearest path
  * City names will no longer be the same word twice (i.e. Carnivalcarnival)
  * Street lights have moved to the side of the roads
+ * Random sign types are no longer hard-coded. Thanks to Curufea for suggesting this
