Edited wiki page FAQ through web user interface.

--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -20,10 +20,14 @@
 == Installation and Running ==
 
 *How do I install Mace?*
-		There is no installer for Mace. Just extract the files anywhere and then run Mace.exe. If you have any problems, you are very welcome to post in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic].
+	There is no installer for Mace. Just extract the files anywhere and then run Mace.exe. If you have any problems, you are very welcome to post in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ Mace topic].
 
 *How do I remove Mace from my computer?*
 	Delete the Mace folder. Mace doesn't edit any other areas of your computer, except for the !MineCraft saves folder.
+
+*Does Mace break when a new version of MineCraft is released?
+	No. Mace is a tool, rather than a mod, so consequently it doesn't need updating with every version of MineCraft.
+	Mace might break if the world format changes. However, this is an extremely rare thing and Notch would most likely provide an automatic converter, so that shouldn't be a problem.
 
 *Does Mace work on Windows 7? Does it work with 64-bit Windows?*
 	Mace is written entirely on Windows 7 (64-bit), so it definitely does!
