--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -26,3 +26,4 @@ These changes are done and will be in V1.5.0:
  * Random sign types are no longer hard-coded. Thanks to Curufea for suggesting this
  * The project is now compatible with Mono 2.6 Beta 3, so in theory (I can't test this) it should be possible to load the project in that on a Mac or Linux and run it
  * Coffins are now chests, full of bones and other items. Thanks to infraspace for this suggestion
+ * Added/modified/removed some of the random sign text
