--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -4,12 +4,11 @@
 I am aiming to have these things in V1.5.0:
 
  * Importing portraits (if I can figure out how to do that)
- * More buildings (normal library, ruined house)
  * Other stuff...
 
 These changes are done and will be in V1.5.0:
 
- * Added new buildings: market, house with a garden roof, shrine, baths
+ * Added new buildings: market, house with a garden roof, shrine, baths, ruined buildings, library, mosque
  * "Very rare" buildings will not spawn within 50 blocks of the same type of building. "Rare" buildings will not spawn within 25 blocks of the same type of building.
  * Greenhouses are now "rare" frequency, rather than "average". Thanks to Sammmiii for this suggestion.
  * Streets names are now all unique.
