--- a/wiki/Buildings.wiki
+++ b/wiki/Buildings.wiki
@@ -9,7 +9,7 @@ This refers to the buildings within the city.
 Some buildings are done already. Here are some more buildings that I would like to add:
 
   * City hall
-  * Ruined buildings
+  * Swimming pool
   * Others...
 
 = Planned random elements =
