--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -7,6 +7,20 @@ For changes that are done, but not released yet, please see the UnreleasedChange
 
   * Option to include/exclude chests (and make valuable materials into common materials)
   * Credits page
+  * Splitting the city into districts
+  * Combine the church and the graveyard
+  * Add a city square
+  * Add a city hall
+  * Add a mineshaft below the city
+  * More building signs should have random text
+  * Different types of paths, depending on the district type
+  * More noticeboard messages
+  * Link the noticeboard messages to the city buildings
+  * Small amount of lava ponds
+  * Move the noticeboard to the city square
+  * Different types of city walls
+  * More city emblems
+  * Move city emblem data to files
 
 == Possible Features ==
 
@@ -14,9 +28,3 @@ These things might be too ambitious or just not possible.
 
   * Multiple cities
   * Allow for putting the city in an existing world
-
-== Sections ==
-
-For more planned features, please see the pages dedicated to the sections of the city:
-
-[Paths], [Buildings], NoticeBoard, [Walls], [Moat], [Drawbridges], GuardTowers and [Farms].
