--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -23,7 +23,8 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Move city emblem data to files
   * Add farming buildings
   * Allow for farms to be orientated the other way
-  * Add stairs to some buildings 
+  * Add stairs to some buildings
+  * Add to FAQ: how to use with multiplayer servers
 
 == Possible Features ==
 
