--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -3,7 +3,7 @@
 
 For changes that are done, but not released yet, please see the UnreleasedChanges page.
 
-== General ==
+== Planned ==
 
   * Option to include/exclude chests (and make valuable materials into common materials)
   * Credits page
@@ -26,7 +26,7 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * Add stairs to some buildings
   * Add to FAQ: how to use with multiplayer servers
 
-== Possible Features ==
+== Possible ==
 
 These things might be too ambitious or just not possible.
 
