Edited wiki page ToDo through web user interface.

--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -32,4 +32,4 @@ These things might be too ambitious or just not possible.
 
   * Multiple cities
   * Allow for putting the city in an existing world
-  * Add a spike moat when the MineCraft adventure update is released
+  * Add a spike moat when the !MineCraft adventure update is released
