--- a/wiki/Credits.wiki
+++ b/wiki/Credits.wiki
@@ -6,3 +6,5 @@ Thank you to jaquadro for his [http://code.google.com/p/substrate-minecraft/ Sub
 Thank you to everybody in the [http://www.minecraftforum.net/topic/357201-mace-v140-random-city-generator/ forum topic] for their encouragement, suggestions and bug reports. Most notably Commander Keen, Curufea and Golgrinn. Thanks guys!
 
 Thank you to people who have suggested ideas that went into !MineCraft. They are listed in the notes for each version.
+
+Thank you to Simon and Lewis, because a significant portion of Mace was written whilst listening to [http://yogscast.wikia.com/wiki/The_YoGPoD The YoGPoD].
