--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -9,13 +9,13 @@
 *When will Mace be finished?*
 	My aim with Mace is to randomly generate a complete city, so from that perspective it is done. However, there are many more features that I would like to add. Eventually I'll declare it as finished, then move on to something else.
 
-*I would like to make my own world generator. How did you make Mace?*
-	Mace uses the [http://code.google.com/p/substrate-minecraft/ Substrate library], which handles all the world editing. I tell Substrate what to do and then it handles all the complicated stuff.
-
 	Mace is written in C#, but Substrate will work with other languages, such as VB. Substrate provides many examples in the C# language.
 
 *When will the next version of Mace be released?*
 	I don't know. The amount of free time I have available is unpredictable, so it is hard for me to estimate when the next version will be done.
+
+*When tools do you use to make Mace?*
+	The code is written in [http://en.wikipedia.org/wiki/Microsoft_Visual_Studio Microsoft Visual Studio] 2010 Professional. I use the [http://code.google.com/p/substrate-minecraft/ Substrate library], which handles all the complicated world editing and creation. I use two mods to make the city buildings, which are [http://www.minecraftforum.net/topic/94310-172-single-player-commands-v210-1-new-update/ Single Player Commands] and [http://www.minecraftforum.net/topic/140684-172-toomanyitems-in-game-invedit-july-1/ TooManyItems]. I use [http://www.minecraftforum.net/topic/153066-cartograph-g-map-your-beta-17/ Cartograph G] to render the world as an image, which is very useful for debugging. I use [http://code.google.com/ Google Code] for project hosting.
 
 == Installation and Running ==
 
