--- a/wiki/ToDo.wiki
+++ b/wiki/ToDo.wiki
@@ -16,6 +16,8 @@ For changes that are done, but not released yet, please see the UnreleasedChange
   * More noticeboard messages
   * Link the noticeboard messages to the city buildings
   * Move the noticeboard to the city square
+  * Add a boathouse when there's a water moat
+  * Create a rail system inside the city walls
   * Different types of city walls
   * More city emblems
   * Add farming buildings
