--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,9 +5,12 @@ This page has the features that will be arriving in V1.6.
 
 == Done ==
 
+* Added a cathedral, which will appear once per city.
+* Churches are now "very rare" frequency, rather than "rare".
+* Graveyards are now excluded, because the cathedral has a graveyard.
+
 == In Progress ==
 
- * Redesigned church
  * Improved Linux compatibility
  * Mineshaft
  * Terrain generator for the ground
