--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -123,7 +123,7 @@
 *Is there anything underneath the city?*
 	Currently there is nothing underneath the city. It is just bedrock, then stone, then grass. This might change in the future. Some buildings have underground areas.
 
-*Can I make my own city emblems*
+*Can I make my own city emblems?*
 	Yes! Please see [http://www.minecraftforum.net/topic/357201-mace-v150-random-city-generator/page__view__findpost__p__6347117 Ghostdancer's guide].
 
 == Distribution and Modifying ==
