--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,20 +5,20 @@ This page has the features that will be arriving in the Underground Update (V1.6
 
 == Done ==
 
+ * Underground terrain is now stone, dirt, gravel and sand (with occasional sandstone)
+ * Ores are generated underground
  * Added a cathedral, which will appear once per city.
  * Churches are now "very rare" frequency, rather than "rare".
  * Graveyards are now excluded, because the cathedral has a graveyard.
  * Added a simple house made of stone and bricks
  * Changed one of the wooden houses to be made from bricks
  * Added a tent building
- * Underground terrain is now stone, dirt, gravel and sand (with occasional sandstone)
+
 
 == In Progress ==
 
  * Improved Linux compatibility
  * Mineshaft
- * Generate ores underground
- * Ores underground
 
 == Planned ==
 
