--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -11,9 +11,8 @@ This page has the features that will be arriving in the Underground Update (V1.6
  * Churches are now "very rare" frequency, rather than "rare".
  * Graveyards are now excluded, because the cathedral has a graveyard.
  * Added a simple house made of stone and bricks
- * Changed one of the wooden houses to be made from bricks
  * Added a tent building
-
+ * Made a whole bunch of small improvements to the existing buildings
 
 == In Progress ==
 
