--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,14 +5,15 @@ This page has the features that will be arriving in the Underground Update (V1.6
 
 == Done ==
 
- * Underground terrain is now stone, dirt, gravel and sand (with occasional sandstone)
- * Ores are generated underground
- * Added a cathedral, which will appear once per city.
+ * Underground terrain is now stone, dirt, gravel and sand (with occasional sandstone).
+ * Ores are generated underground.
+ * Added a new frequency type: "unique". Each unique building will appear a maximum of once per city. Unique buildings must be at least 50 squares away from each other.
+ * Added a cathedral and a prison. Both have the "unique" frequency.
+ * Added a simple house made of stone and bricks.
+ * Added a tent building.
+ * Made a whole bunch of small improvements to the existing buildings. Items in the bakery, paintings, basements, changing room in the baths, longer diving board, lava instead of fire in the baths, random drink names in the tavern, random library sections...
  * Churches are now "very rare" frequency, rather than "rare".
  * Graveyards are now excluded, because the cathedral has a graveyard.
- * Added a simple house made of stone and bricks
- * Added a tent building
- * Made a whole bunch of small improvements to the existing buildings. Items in the bakery, paintings, basements, changing room in the baths, longer diving board, lava instead of fire in the baths, random drink names in the tavern, random library sections...
 
 == In Progress ==
 
