--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -24,5 +24,7 @@ This page has the features that will be arriving in the Underground Update (V1.6
 
  * Option to exclude chests and valuable blocks
  * Option to change the city wall material
- * A district in the middle of the city, with the mineshaft entrance, noticeboard and more
+ * New building: noticeboard area
+ * New building: mineshaft entrance (ideally in the center)
  * Flags on the guard towers
+ * Fix mob spawners
