--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -15,6 +15,8 @@ This page has the features that will be arriving in the Underground Update (V1.6
  * Churches are now "very rare" frequency, rather than "rare".
  * Graveyards are now excluded, because the cathedral has a graveyard.
  * Added help to all of the controls.
+ * Chest items can now be excluded
+ * Valuable blocks in architecture can now be less valuable blocks
 
 == In Progress ==
 
@@ -24,7 +26,6 @@ This page has the features that will be arriving in the Underground Update (V1.6
 
 == Planned ==
 
- * Option to exclude chests and valuable blocks
  * Option to change the city wall material
  * New building: mineshaft entrance (ideally in the center)
  * Flags on the guard towers
