--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -9,20 +9,21 @@ This page has the features that will be arriving in the Underground Update (V1.6
  * Ores are generated underground.
  * Added a new frequency type: "unique". Each unique building will appear a maximum of once per city. Unique buildings must be at least 20 squares away from another unique building.
  * Added a cathedral and a prison. Both have the "unique" frequency.
+ * The noticeboard is now a building, that will randomly appear somewhere in most cities. It has the "unique" frequency.
  * Added a simple house made of stone and bricks.
  * Added a tent building.
  * Made a whole bunch of small improvements to the existing buildings. Items in the bakery, paintings, basements, changing room in the baths, longer diving board, lava instead of fire in the baths, random drink names in the tavern, random library sections...
  * Churches are now "very rare" frequency, rather than "rare".
  * Graveyards are now excluded, because the cathedral has a graveyard.
  * Added help to all of the controls.
- * Chest items can now be excluded.
- * Valuable blocks in architecture can now be less valuable blocks.
+ * Added an option to make all chests empty.
+ * Added an option to turn valuable blocks in architecture to less valuable blocks.
+ * I accidentally extinguished all the fires in a previous version, but they are now back to normal.
 
 == In Progress ==
 
  * Improved Linux compatibility
  * Mineshaft
- * New building: noticeboard area
 
 == Planned ==
 
