--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -20,6 +20,7 @@ This page has the features that will be arriving in the Underground Update (V1.6
  * Added an option to make all chests empty.
  * Added an option to turn valuable blocks in architecture to less valuable blocks.
  * I accidentally extinguished all the fires in a previous version, but they are now back to normal.
+ * Mob spawners placed in the Mace resource world will now work. Thanks to Ghostdancer for letting me know they were broken.
 
 == In Progress ==
 
@@ -28,6 +29,4 @@ This page has the features that will be arriving in the Underground Update (V1.6
 == Planned ==
 
  * Option to change the city wall material
- * New building: mineshaft entrance (ideally in the center)
  * Flags on the guard towers
- * Fix mob spawners
