--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -9,14 +9,14 @@ This page has the features that will be arriving in the Underground Update (V1.6
  * Underground terrain is now stone, dirt, gravel and sand (with occasional sandstone).
  * Ores are generated underground.
  * Added a new frequency type: "unique". Each unique building will appear a maximum of once per city. Unique buildings must be at least 10 squares away from another unique building.
- * Added a cathedral, prison, pyramid and large fountain. These all have the "unique" frequency.
+ * Added a cathedral, archery range, prison, pyramid and large fountain. These all have the "unique" frequency.
  * Added a castle, which was designed by [http://www.youtube.com/user/TheRealMegaMiner TheMegaMiner]. The castle has the "unique" frequency value.
  * Added a simple house made of stone and bricks.
  * Added a tent building.
  * Added an apartment building. Thanks to redjay17 for this suggestion.
  * A small number of barns will now appear sporadically between the farms.
  * The noticeboard is now a building, that will randomly appear somewhere in most cities. It has the "unique" frequency.
- * Made a whole bunch of small improvements to the existing buildings. Items in the bakery, paintings, basements, changing room in the baths, longer diving board, lava instead of fire in the baths, random drink names in the tavern, random library sections...
+ * Made a whole bunch of small improvements to the existing buildings. Items in the bakery, more noticeboard messages, paintings, basements, changing room in the baths, longer diving board, lava instead of fire in the baths, random drink names in the tavern, random library sections...
  * City wall material is now selectable. It will default to a random type.
  * Guard towers now allow for flags, instead of fire beacons. You can let Mace randomly chose between the two, or pick one yourself.
  * Churches are now "very rare" frequency, rather than "rare".
@@ -29,7 +29,5 @@ This page has the features that will be arriving in the Underground Update (V1.6
  * Added two new emblems: heart and cobweb
 
 == In Progress ==
-  * More noticeboard messages
-  * Link the noticeboard messages to the city buildings
 
 == Planned ==
