--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -4,7 +4,7 @@
 This page has the features that will be arriving in the Underground Update (V1.6).
 
 == Done ==
- * The code is now significantly more compatible with Linux and has been tested successfully in Mono on Ubuntu 11.04. This is all thanks to Surrogard alias Stefan.
+ * The code is now significantly more compatible with Linux and has been tested successfully in Mono on Ubuntu 11.04. Massive thank you to Surrogard for rewriting my code to make it friendly to Windows and Linux.
  * Added a mineshaft below the city. The entrance is in the middle of the city.
  * Underground terrain is now stone, dirt, gravel and sand (with occasional sandstone).
  * Ores are generated underground.
