--- a/wiki/FAQ.wiki
+++ b/wiki/FAQ.wiki
@@ -87,23 +87,13 @@
 == Buildings ==
 
 *Can I change how often a building appears?*
-	Yes. Go to the Resources folder, then open buildings.xml. Scroll down and look at the building names. Once you find the building, change the frequency value to "very common", "common", "average", "rare", "very rare" or "exclude". Excluded buildings will not appear on the map.
+	Yes. Go to the Resources folder, then open buildings.xml. Scroll down and look at the building names. Once you find the building, change the frequency value to "very common", "common", "average", "rare", "very rare", "unique" or "exclude". Excluded buildings will not appear on the map. Unique buildings appear a maximum of once per city.
 
 *Can I modify the buildings that Mace puts in the city?*
-	Yes. Open the Resources folder, then copy the Mace folder to your !MineCraft saves folder, which is located at %appdata%\.minecraft\saves
+	Yes. Please see [http://www.minecraftforum.net/topic/357201-mace-v150-random-city-generator/page__view__findpost__p__6854916 Ghostdancer's instructions] for all the details.
 
-	You can then edit the buildings in !MineCraft. When you are finished, copy the world back to the resources folder.
-
-*Can I add more buildings for Mace to put inside the cities?*
-	Yes. Follow the steps in the question above, then create your new building(s) in the resource world.
-
-	Make sure your building faces the same direction as all the other buildings. The total area of your building should be square. It's okay to have a rectangular building, but make sure there's an empty area to make the whole plot a square.
-
-	Once you are done, open up buildings.xml from the Resources folder. It can be opened in any text editor, such as !NotePad.
-
-	Copy one of the existing buildings, from the {{{<building>}}} tag to the {{{</building>}}} tag. Paste this in the line below. Give your building a name that doesn't exist. Change the size to be the amount of blocks on each side (remember that this includes blocks containing torches), then set the source_x and source_y, which can be found by going to the front-right corner of your building and pressing F3. If your building has an underground area, add/edit a source_start_y tag and set the value to be the lowest point of your building. If you don't know, just set this to be 1. Then finally set the frequency from "very common", "common", "average", "rare" or "very rare".
-
-	Save the file. Close !MineCraft. Copy the world back to the Mace resources folder. Then generate a new city!
+*Can I add new buildings for Mace to generate in the city?*
+	Yes. Please see [http://www.minecraftforum.net/topic/357201-mace-v150-random-city-generator/page__view__findpost__p__6854916 Ghostdancer's instructions] for all the details.
 
 *All Mace buildings are square, any plans to change that?*
 	Currently I don't have any plans to change this. Squares are a lot easier to deal with and rectangular/circular buildings can be created within squares, so I'm happy with the way it works.
