--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -5,11 +5,14 @@ The next version will just be a small update to fix bugs.
 
 == Done ==
 
+* Added lots more library sections and tavern combinations. All provided by SoNick - thanks!
 * Fixed the rail rotation bug
 * Cities without farms now have 8 empty blocks outside, rather than 16
+* Made a couple of minor changes to buildings.
 
 == In Progress ==
 
 * Portrait bug
+* Portal orientation bug
 
 == Planned ==
