Edited wiki page UnreleasedChanges through web user interface.

--- a/wiki/UnreleasedChanges.wiki
+++ b/wiki/UnreleasedChanges.wiki
@@ -8,6 +8,7 @@ The next version will just be a small update to fix bugs.
  * Portrait bug is fixed. Thank you to Ghostdancer for letting me know about that.
  * Fixed the rail rotation bug. Thank you to Commander Keen for letting me know about that.
  * Added lots more library sections and tavern combinations. All provided by !SoNick - thanks!
+ * Changed the way the lighting is called, which seems to have reduced the lighting bugs.
  * Cities without farms now have 8 empty blocks outside, rather than 16. Thank you to Arschkrampi for hassling me into that!
  * Made a couple of minor changes to the buildings.
  * Added a new compact house, submitted by coau14. Thanks!
